Splitted notebooks to 2 different tasks.

--- a/short_experiments/emb_vectors_self.ipynb
+++ b/short_experiments/emb_vectors_self.ipynb
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:56:45.570335Z",
-     "start_time": "2025-03-18T14:56:41.117911Z"
+     "end_time": "2025-03-31T09:46:26.127408Z",
+     "start_time": "2025-03-31T09:46:24.143924Z"
     }
    },
    "cell_type": "code",
@@ -38,7 +38,19 @@
     "from emb_dist_functions import get_tokens_from_vectors, plot_dist"
    ],
    "id": "87754efcb8228938",
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'get_model_and_embed' from 'emb_vectors_functions' (/home/galimzyanov/llm-experiments/short_experiments/emb_vectors_functions.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 4\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtorch\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mseaborn\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msns\u001B[39;00m\n\u001B[0;32m----> 4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01memb_vectors_functions\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m find_self_embeds, get_model_and_embed\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01memb_dist_functions\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m get_tokens_from_vectors, plot_dist\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'get_model_and_embed' from 'emb_vectors_functions' (/home/galimzyanov/llm-experiments/short_experiments/emb_vectors_functions.py)"
+     ]
+    }
+   ],
    "execution_count": 1
   },
   {
