--- a/short_experiments/jb_tokens.ipynb
+++ b/short_experiments/jb_tokens.ipynb
@@ -75,10 +75,13 @@
     "# token_id = 76224\n",
     "\n",
     "x = embeddings[token_id]\n",
-    "w = (x @ embeddings.T)\n",
+    "w = x @ embeddings.T\n",
     "scores, indices = torch.topk(w, k=top_k)\n",
     "print(f\"Token - '{tokenizer.decode(token_id)}' , id = {token_id}\")\n",
-    "[print(f\"'{tokenizer.decode(ind)}'\", f\"{score.item():.3f}\") for ind, score in zip(indices, scores)];"
+    "[\n",
+    "    print(f\"'{tokenizer.decode(ind)}'\", f\"{score.item():.3f}\")\n",
+    "    for ind, score in zip(indices, scores)\n",
+    "];"
    ],
    "id": "c52bb4d90b5ca1db",
    "outputs": [
