--- a/short_experiments/shadow_tokens_distribution.ipynb
+++ b/short_experiments/shadow_tokens_distribution.ipynb
@@ -14,7 +14,7 @@
     "import numpy as np\n",
     "\n",
     "from transformers import AutoTokenizer\n",
-    "from model_loading import get_weight_by_name\n"
+    "from model_loading import get_weight_by_name"
    ],
    "id": "c8a4c2d3a58c68cd",
    "outputs": [],
@@ -71,16 +71,14 @@
     "top_k = 1\n",
     "end = len(embeddings)\n",
     "batch_size = 5000\n",
-    "batches = [\n",
-    "    range(i, min(i + batch_size, end)) for i in range(start, end, batch_size)\n",
-    "]\n",
+    "batches = [range(i, min(i + batch_size, end)) for i in range(start, end, batch_size)]\n",
     "query_matrix = embeddings\n",
     "second_ratios = []\n",
     "\n",
     "for batch_idx, batch in enumerate(tqdm(batches)):\n",
     "    batch_array = torch.tensor(list(batch), device=embeddings.device)\n",
     "    X = query_matrix[batch_array]\n",
-    "    w = (X @ embeddings.T)\n",
+    "    w = X @ embeddings.T\n",
     "\n",
     "    # Get self-similarity scores efficiently using the batch indices\n",
     "    batch_indices = torch.arange(len(batch_array), device=embeddings.device)\n",
@@ -88,7 +86,7 @@
     "    # Set self-similarity to a very low value\n",
     "    w[batch_indices, batch_array] = -1e9\n",
     "    scores, indices = torch.topk(w, k=top_k, dim=-1)\n",
-    "    ratio = (scores[:,0]/self_scores).cpu().float().numpy()\n",
+    "    ratio = (scores[:, 0] / self_scores).cpu().float().numpy()\n",
     "    second_ratios.append(ratio)\n",
     "\n",
     "second_ratios = np.concatenate(second_ratios)"
@@ -117,14 +115,20 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.hist(second_ratios, bins=50, alpha=0.7, color='skyblue', edgecolor='black')\n",
+    "plt.hist(second_ratios, bins=50, alpha=0.7, color=\"skyblue\", edgecolor=\"black\")\n",
     "\n",
-    "plt.xlabel('Second to First Ratio Score', fontsize=12)\n",
-    "plt.ylabel('Frequency', fontsize=12)\n",
-    "plt.title('Histogram of Second/First Similarity Ratio', fontsize=14)\n",
+    "plt.xlabel(\"Second to First Ratio Score\", fontsize=12)\n",
+    "plt.ylabel(\"Frequency\", fontsize=12)\n",
+    "plt.title(\"Histogram of Second/First Similarity Ratio\", fontsize=14)\n",
     "plt.grid(alpha=0.3)\n",
     "mean_ratio = np.median(second_ratios)\n",
-    "plt.axvline(mean_ratio, color='red', linestyle='dashed', linewidth=1, label=f'Median: {mean_ratio:.4f}')\n",
+    "plt.axvline(\n",
+    "    mean_ratio,\n",
+    "    color=\"red\",\n",
+    "    linestyle=\"dashed\",\n",
+    "    linewidth=1,\n",
+    "    label=f\"Median: {mean_ratio:.4f}\",\n",
+    ")\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -147,26 +151,27 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T13:28:39.746447Z",
-     "start_time": "2025-03-31T13:28:39.715335Z"
+     "end_time": "2025-03-31T13:41:15.843698Z",
+     "start_time": "2025-03-31T13:41:15.771731Z"
     }
    },
    "cell_type": "code",
-   "source": "sum(second_ratios>0.9)",
+   "source": [
+    "print(sum(second_ratios > 1), sum(second_ratios > 0.9))\n",
+    "print(sum(second_ratios > 0.9) / len(second_ratios))"
+   ],
    "id": "3720092668bdf6c1",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10461"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9541 10461\n",
+      "0.06879340277777778\n"
+     ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 29
   },
   {
    "metadata": {},
