--- a/short_experiments/shadow_tokens_minimize.ipynb
+++ b/short_experiments/shadow_tokens_minimize.ipynb
@@ -146,7 +146,9 @@
    },
    "cell_type": "code",
    "source": [
-    "print(f\"Number of bad embeddings = {len(fail_indices)}, dimension = {embeddings.shape[1]}, dict size = {embeddings.shape[0]}\")\n",
+    "print(\n",
+    "    f\"Number of bad embeddings = {len(fail_indices)}, dimension = {embeddings.shape[1]}, dict size = {embeddings.shape[0]}\"\n",
+    ")\n",
     "\n",
     "for ind_list_ in ind_batched_list:\n",
     "    x_optim = None\n",
@@ -203,10 +205,10 @@
     "argmax_results = []\n",
     "\n",
     "for iteration in tqdm(range(num_iterations)):\n",
-    "    X = torch.randn(m, d, device='cuda', dtype=torch.bfloat16, requires_grad=False)\n",
+    "    X = torch.randn(m, d, device=\"cuda\", dtype=torch.bfloat16, requires_grad=False)\n",
     "    X = X / torch.norm(X, dim=1, keepdim=True)\n",
     "    logits = X @ embeddings.T  # (m, n)\n",
-    "    argmax_indices = logits.argmax(dim=1) # (m,)\n",
+    "    argmax_indices = logits.argmax(dim=1)  # (m,)\n",
     "    argmax_results.append(argmax_indices.cpu())\n",
     "    del X, logits\n",
     "    torch.cuda.empty_cache()\n",
