--- a/short_experiments/shadow_tokens_svm.ipynb
+++ b/short_experiments/shadow_tokens_svm.ipynb
@@ -3,27 +3,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-29T12:47:40.009318Z",
-     "start_time": "2025-03-29T12:47:33.467994Z"
+     "end_time": "2025-03-31T11:01:14.410197Z",
+     "start_time": "2025-03-31T11:01:14.405783Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import torch\n",
-    "from tqdm import tqdm\n",
-    "import numpy as np\n",
     "import gc\n",
-    "# from sklearn.svm import LinearSVC\n",
     "from cuml.svm import LinearSVC\n",
     "import numpy as np\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "from emb_vectors_functions import find_self_embeds, get_shadow_ratios\n",
+    "from transformers import AutoTokenizer\n",
+    "from emb_vectors_functions import find_self_embeds\n",
     "from model_loading import get_weight_by_name"
    ],
    "id": "c8a4c2d3a58c68cd",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
@@ -109,7 +106,7 @@
     "nn = fail_indices[2]\n",
     "nn = 2\n",
     "self_emb = embeddings[nn]\n",
-    "X = torch.cat([embeddings[:nn], embeddings[nn+1:]], dim=0)\n",
+    "X = torch.cat([embeddings[:nn], embeddings[nn + 1 :]], dim=0)\n",
     "X = self_emb[None, :] - X;"
    ],
    "id": "18ec4fe94b19f688",
@@ -160,7 +157,7 @@
    },
    "cell_type": "code",
    "source": [
-    "res = (pred != y_all)\n",
+    "res = pred != y_all\n",
     "error_ind = np.where(res)\n",
     "n_errors = res.sum()\n",
     "print(n_errors)"
