Added class weight. Helps in simple case, fails in interesting

--- a/short_experiments/shadow_tokens_svm.ipynb
+++ b/short_experiments/shadow_tokens_svm.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T11:01:14.410197Z",
-     "start_time": "2025-03-31T11:01:14.405783Z"
+     "end_time": "2025-03-31T14:05:54.429288Z",
+     "start_time": "2025-03-31T14:05:47.218661Z"
     }
    },
    "cell_type": "code",
@@ -20,13 +20,13 @@
    ],
    "id": "c8a4c2d3a58c68cd",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-29T12:47:43.902066Z",
-     "start_time": "2025-03-29T12:47:42.464372Z"
+     "end_time": "2025-03-31T14:05:55.642694Z",
+     "start_time": "2025-03-31T14:05:54.434324Z"
     }
    },
    "cell_type": "code",
@@ -52,7 +52,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7d0da561b36245bcb5d2a71c8faf9bdb"
+       "model_id": "f5b2dd56c14d43d79d949e9aa15951e0"
       }
      },
      "metadata": {},
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-29T12:47:54.394482Z",
-     "start_time": "2025-03-29T12:47:45.534143Z"
+     "end_time": "2025-03-31T14:06:04.708947Z",
+     "start_time": "2025-03-31T14:05:55.802111Z"
     }
    },
    "cell_type": "code",
@@ -81,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:06<00:00,  1.90it/s]\n"
+      "100%|██████████| 13/13 [00:06<00:00,  1.97it/s]\n"
      ]
     },
     {
@@ -90,6 +90,16 @@
      "text": [
       "Number of bad embeddings = 1037\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "execution_count": 3
@@ -97,27 +107,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-29T12:49:15.302750Z",
-     "start_time": "2025-03-29T12:49:14.166423Z"
+     "end_time": "2025-03-31T14:06:05.938962Z",
+     "start_time": "2025-03-31T14:06:04.739520Z"
     }
    },
    "cell_type": "code",
    "source": [
     "nn = fail_indices[2]\n",
-    "nn = 2\n",
     "self_emb = embeddings[nn]\n",
     "X = torch.cat([embeddings[:nn], embeddings[nn + 1 :]], dim=0)\n",
     "X = self_emb[None, :] - X;"
    ],
    "id": "18ec4fe94b19f688",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-29T12:49:20.620453Z",
-     "start_time": "2025-03-29T12:49:19.231530Z"
+     "end_time": "2025-03-31T14:06:07.368879Z",
+     "start_time": "2025-03-31T14:06:05.970819Z"
     }
    },
    "cell_type": "code",
@@ -129,30 +138,30 @@
    ],
    "id": "c0740d763534964d",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-29T12:49:41.405662Z",
-     "start_time": "2025-03-29T12:49:38.923388Z"
+     "end_time": "2025-03-31T14:10:07.594188Z",
+     "start_time": "2025-03-31T14:10:05.105509Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "clf = LinearSVC(C=1e9, max_iter=1000, tol=1e-7)\n",
+    "clf = LinearSVC(C=1e9, max_iter=10000, tol=1e-7, class_weight={1: 1, -1: X.shape[0]})\n",
     "clf.fit(X_all, y_all)\n",
     "pred = clf.predict(X_all)"
    ],
    "id": "51ec90ffd287d4ce",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-29T12:49:41.416184Z",
-     "start_time": "2025-03-29T12:49:41.412306Z"
+     "end_time": "2025-03-31T14:10:07.605551Z",
+     "start_time": "2025-03-31T14:10:07.601342Z"
     }
    },
    "cell_type": "code",
@@ -172,28 +181,20 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-29T11:52:30.871284Z",
-     "start_time": "2025-03-29T11:52:30.867209Z"
+     "end_time": "2025-03-31T14:06:15.064276Z",
+     "start_time": "2025-03-31T14:06:15.061115Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "5a20f54c693cfef6",
+   "id": "1e0b8efd4d227137",
    "outputs": [],
-   "execution_count": 12
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "1e0b8efd4d227137"
+   "execution_count": null
   }
  ],
  "metadata": {
